# darwin

./: .gitignore  CITATION_VERIFICATION.md  ENDPOINT_CONFIG.md  README.md  darwin_integration_example.py  pyproject.toml  research_plan_1.json  research_plan_1.md  research_plan_2.json  research_plan_2.md  research_plan_3.json  research_plan_3.md  research_plan_generator.py  research_plan_generator_design.md  research_plans_project_management.json  research_portfolio_summary.md  sample-config.toml  sample_research_plan.json  sample_research_plan.md  test_config.py  test_debug_speed.py  test_iteration2_fix.py  test_optimization_strategies.py
.github/workflows/: ci.yml
docs/: design.md
examples/: citation_integration_example.py
src/darwin/: __init__.py  __main__.py  citation_cli.py  citation_integration.py  citation_logger.py  citation_parser.py  citation_pipeline.py  citation_prompts.py  citation_verifier.py  cli.py  config.py  console.py  criteria.toml  debug_modes.py  graph.py  output.py  review.py  state.py
src/darwin/agents/: __init__.py  _common.py  evolution.py  generation.py  human_review.py  literature.py  meta_review.py  proximity.py  ranking.py  reflection.py  supervisor.py
tests/: conftest.py  test_citation_system.py  test_cli.py  test_console_threading.py  test_graph.py  test_main.py  test_max_tokens_configuration.py  test_output.py  test_review.py  test_state.py
tests/test_agents/: test_common.py  test_evolution.py  test_generation.py  test_literature.py  test_meta_review.py  test_proximity.py  test_ranking.py  test_reflection.py  test_supervisor.py
